src/css/less/_custom.less
/* ... */
.search-results-header + .categories-wrapper {
  margin-top: 80px;
}

.search-results-header + .categories-wrapper .sidebar-description {
  display: none;
}

.label {
  display: inline-block;
  padding: .2em .6em .3em;
  font-size: 14px;
  font-weight: bold;
  line-height: 1;
  color: #fff;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  border-radius: .25em;
}

.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
  background-color: transparent;
}

#subscribe-form .input-group-btn {
  position: absolute;
  right: 38px;
  z-index: 1000;
}

#subscribe-form .input-group {
  width: 100%;
}

input.form-control.newsletter-email {
  padding-right: 50px;
}

/*Classes for sticky header (improved 15/04/18)*/

.sticky-nav {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 9999;
}

.mt-55 {
  margin-top: 55px !important;
}
/************/

.wrapper-header {
    overflow: visible;
}

